[package]
name = "selector-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
dotenvy = "0.15.7"
features = "0.10.0"
native-tls = "0.2.14"
postgres = { version = "0.19.10", features = ["with-serde_json-1"] }
postgres-native-tls = "0.5.1"

